# veta

./: .gitignore  CMakeLists.txt  VetaConfig.cmake.in  config.cmake.in  readme.md
docs/: sfm_data_structure
src/: CMakeLists.txt  main.cpp
src/include/veta/: landmark.h  pose.h  type_def.hpp  utils.hpp  veta.h  view.h
src/include/veta/camera/: intrinsics.h  pinhole.h  pinhole_brown.h  pinhole_eadial.h  pinhole_fisheye.h  pinhole_radial.h  spherical.h
src/src/: landmark.cpp  pose.cpp  veta.cpp  view.cpp
src/src/camera/: intrinsics.cpp  pinhole.cpp  pinhole_brown.cpp  pinhole_eadial.cpp  pinhole_fisheye.cpp  pinhole_radial.cpp  spherical.cpp
